k8ns/spring-batch-db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
    tier: database
  clusterIP: None
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  tier: database
  labels:
    app: spring-batch-deployment
spec:
  selector:
    matchLabels:
      app: postgres
    strategy:
      type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
